syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.hshekhar.surveyspot.proto";
option go_package = "proto";

package proto;

import "google/protobuf/empty.proto";
import "user.proto";


message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    User user = 2;
}

message LogoutRequest {
    string username = 1;
    string token = 2;
}

message TokenVerificationRequest {
    string token = 1;
}

message TokenVerificationResponse {
    bool valid = 1;
    string error = 2;
}

service LoginAPI {
    rpc LogIn(LoginRequest) returns (LoginResponse);
    rpc LogOut(LogoutRequest) returns (google.protobuf.Empty);
    rpc VerifyToken(TokenVerificationRequest) returns (TokenVerificationResponse);
}